--- a/graphcool.yml
+++ b/graphcool.yml
@@ -31,7 +31,7 @@ permissions:
   #   # query: ./permissions/Checkout.graphql
 
 rootTokens:
-  - defaultToken
+  - commerceql
 
 functions:
   addItemToBasket:
