--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
   "private": true,
   "scripts": {
-    "format": "prettier --write ./src/*.ts",
+    "start": "dotenv -- nodemon -e ts,graphql -x ts-node src",
+    "dev": "npm-run-all --parallel start playground",
+    "playground": "graphql playground",
+    "build": "rimraf dist && tsc",
     "precommit": "lint-staged"
   },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "prettier --write",
-      "git add"
-    ]
-  },
   "dependencies": {
-    "@sendgrid/mail": "^6.1.4",
-    "graphcool-lib": "^0.1.4",
+    "graphql-yoga": "^1.6.1",
+    "prisma-binding": "^1.5.16",
     "stripe": "^5.3.0",
     "validator": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^8.0.53",
     "@types/validator": "^6.3.0",
+    "dotenv-cli": "^1.4.0",
+    "graphql-cli": "^2.15.8",
     "lint-staged": "^6.0.0",
+    "nodemon": "^1.17.2",
+    "npm-run-all": "^4.1.2",
     "prettier": "^1.8.2",
+    "rimraf": "^2.6.2",
+    "ts-node": "^5.0.1",
     "tslint": "^5.8.0",
     "typescript": "^2.6.2"
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
