--- a/.install/package.json
+++ b/.install/package.json
@@ -1,7 +1,7 @@
 {
   "name": "install",
   "version": "1.0.0",
-  "dependencies": {
+  "devDependencies": {
     "graphql-boilerplate-install": "^0.1.8"
   }
 }
