--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "graphql-yoga": "^1.6.1",
+    "prisma": "^1.4.1",
     "prisma-binding": "^1.5.16",
     "stripe": "^5.3.0",
     "validator": "^9.1.2"
   },
   "devDependencies": {
-    "@types/node": "^8.0.53",
     "@types/validator": "^6.3.0",
     "dotenv-cli": "^1.4.0",
     "graphql-cli": "^2.15.8",
@@ -24,7 +24,6 @@
     "prettier": "^1.8.2",
     "rimraf": "^2.6.2",
     "ts-node": "^5.0.1",
-    "tslint": "^5.8.0",
     "typescript": "^2.6.2"
   },
   "lint-staged": {
