--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-PRISMA_STAGE="dev"
 PRISMA_ENDPOINT="__PRISMA_ENDPOINT__"
-PRISMA_CLUSTER="__PRISMA_CLUSTER__"
-PRISMA_SECRET="mysecret123"
-APP_SECRET="jwtsecret123"
+# APP_SECRET="jwtsecret123"
+# PRISMA_SECRET="mysecret123"
+STRIPE_SECRET_KEY="myStripeSecretKey"
