--- a/package.json
+++ b/package.json
@@ -1,35 +1,25 @@
 {
+  "name": "commerceql-boilerplate",
   "private": true,
+  "license": "MIT",
   "scripts": {
-    "start": "dotenv -- nodemon -e ts,graphql -x ts-node src",
-    "dev": "npm-run-all --parallel start playground",
+    "start": "nodemon -e js,graphql -x node -r dotenv/config src/index.js",
+    "debug": "nodemon -e js,graphql -x node --inspect -r dotenv/config src/index.js",
     "playground": "graphql playground",
-    "build": "rimraf dist && tsc",
-    "precommit": "lint-staged"
+    "dev": "npm-run-all --parallel start playground"
   },
   "dependencies": {
-    "graphql-yoga": "^1.6.1",
-    "prisma": "^1.4.1",
-    "prisma-binding": "^1.5.16",
-    "stripe": "^5.3.0",
-    "validator": "^9.1.2"
+    "graphql-yoga": "1.9.0",
+    "prisma-binding": "^1.5.18",
+    "stripe": "^5.8.0",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
-    "@types/validator": "^6.3.0",
-    "dotenv-cli": "^1.4.0",
-    "graphql-cli": "^2.15.8",
-    "lint-staged": "^6.0.0",
-    "nodemon": "^1.17.2",
+    "dotenv": "^5.0.1",
+    "graphql-cli": "^2.15.13",
+    "nodemon": "^1.17.3",
+    "now": "^11.1.7",
     "npm-run-all": "^4.1.2",
-    "prettier": "^1.8.2",
-    "rimraf": "^2.6.2",
-    "ts-node": "^5.0.1",
-    "typescript": "^2.6.2"
-  },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "prettier --write",
-      "git add"
-    ]
+    "prisma": "^1.7.3"
   }
 }
