--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,5 @@
 {
-  "parser": "typescript",
-  "printWidth": 80,
   "singleQuote": true,
   "semi": false,
-  "useTabs": false,
-  "trailingComma": "none",
-  "bracketSpacing": true
+  "jsxBracketSameLine": true
 }
