--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "commerceql-boilerplate",
   "private": true,
   "license": "MIT",
+  "author": "Jamie Barton <hi@jamiebarton.co.uk>",
   "scripts": {
-    "start": "nodemon -e js,graphql -x node -r dotenv/config src/index.js",
-    "debug": "nodemon -e js,graphql -x node --inspect -r dotenv/config src/index.js",
+    "debug":
+      "nodemon -e js,graphql -x node --inspect -r dotenv/config src/index.js",
+    "dev": "npm-run-all --parallel start playground",
     "playground": "graphql playground",
-    "dev": "npm-run-all --parallel start playground"
+    "precommit": "pretty-quick --staged",
+    "start": "nodemon -e js,graphql -x node -r dotenv/config src/index.js"
   },
   "dependencies": {
     "graphql-yoga": "1.9.0",
@@ -17,9 +20,12 @@
   "devDependencies": {
     "dotenv": "^5.0.1",
     "graphql-cli": "^2.15.13",
+    "husky": "^0.14.3",
     "nodemon": "^1.17.3",
     "now": "^11.1.7",
     "npm-run-all": "^4.1.2",
+    "prettier": "^1.12.1",
+    "pretty-quick": "^1.4.1",
     "prisma": "^1.7.3"
   }
 }
