--- a/package.json
+++ b/package.json
@@ -4,28 +4,27 @@
   "license": "MIT",
   "author": "Jamie Barton <hi@jamiebarton.co.uk>",
   "scripts": {
-    "debug":
-      "nodemon -e js,graphql -x node --inspect -r dotenv/config src/index.js",
+    "debug": "nodemon -e js,graphql -x node --inspect -r dotenv/config src/index.js",
     "dev": "npm-run-all --parallel start playground",
     "playground": "graphql playground",
     "precommit": "pretty-quick --staged",
     "start": "nodemon -e js,graphql -x node -r dotenv/config src/index.js"
   },
   "dependencies": {
-    "graphql-yoga": "1.9.0",
-    "prisma-binding": "^1.5.18",
-    "stripe": "^5.8.0",
-    "validator": "^9.4.1"
+    "graphql-yoga": "1.13.1",
+    "prisma-binding": "^2.0.0",
+    "stripe": "^6.0.0",
+    "validator": "^10.2.0"
   },
   "devDependencies": {
     "dotenv": "^5.0.1",
-    "graphql-cli": "^2.15.13",
+    "graphql-cli": "^2.16.0",
     "husky": "^0.14.3",
-    "nodemon": "^1.17.3",
-    "now": "^11.1.7",
-    "npm-run-all": "^4.1.2",
+    "nodemon": "^1.17.4",
+    "now": "latest",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.12.1",
     "pretty-quick": "^1.4.1",
-    "prisma": "^1.7.3"
+    "prisma": "^1.8.3"
   }
 }
