--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
   },
   "dependencies": {
     "graphql-yoga": "1.13.1",
-    "prisma-binding": "^2.0.0",
-    "stripe": "^6.0.0",
-    "validator": "^10.2.0"
+    "prisma-binding": "2.0.0",
+    "stripe": "6.0.0",
+    "validator": "10.2.0"
   },
   "devDependencies": {
-    "dotenv": "^5.0.1",
-    "graphql-cli": "^2.16.0",
-    "husky": "^0.14.3",
-    "nodemon": "^1.17.4",
+    "dotenv": "5.0.1",
+    "graphql-cli": "2.16.0",
+    "husky": "0.14.3",
+    "nodemon": "1.17.4",
     "now": "latest",
-    "npm-run-all": "^4.1.3",
-    "prettier": "^1.12.1",
-    "pretty-quick": "^1.4.1",
-    "prisma": "^1.8.3"
+    "npm-run-all": "4.1.3",
+    "prettier": "1.12.1",
+    "pretty-quick": "1.4.1",
+    "prisma": "1.8.3"
   }
 }
